--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/launcher_icon"
+        android:icon="@mipmap/ic_launcher_maskice"
+        android:roundIcon="@mipmap/ic_launcher_rounded"
         android:label="@string/app_name" >
         <activity
             android:name=".GlavnoSucelje"
