--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="maskice.hr"
-    android:versionCode="3"
+    android:versionCode="4"
     android:versionName="1.2">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -9,6 +9,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
 
         android:label="@string/app_name" >
         <activity
