--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="maskice.hr"
-    android:versionCode="10"
-    android:versionName="1.5.1">
+    android:versionCode="11"
+    android:versionName="1.6">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-feature android:name="android.hardware.ram.low" android:required="true"></uses-feature>
 
     <application
         android:allowBackup="true"
