--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Aug 16 10:11:22 CEST 2017
-ndk.dir=C\:\\Users\\marko\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\marko\\AppData\\Local\\Android\\Sdk
+#Sun Jan 28 22:28:59 CET 2018
+sdk.dir=D\:\\Android\\SDK
