--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jan 28 22:28:59 CET 2018
-sdk.dir=D\:\\Android\\SDK
+#Tue Jan 30 08:24:54 CET 2018
+ndk.dir=C\:\\Users\\marko\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\marko\\AppData\\Local\\Android\\Sdk
